--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -21,3 +21,4 @@ tokio-stream = "0.1.11"
 futures = "0.3.25"
 signature = "1.6.4"
 async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
+toml_edit = "0.19.3"
