--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -23,3 +23,4 @@ rsa = "0.7.0"
 signature = "1.6.4"
 pkcs8 = { version = "0.9.0", features = [ "encryption" ] }
 async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
+toml_edit = "0.19.3"
