--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -24,3 +24,4 @@ signature = "1.6.4"
 pkcs8 = { version = "0.9.0", features = [ "encryption" ] }
 async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
 toml_edit = "0.19.3"
+async-trait = "0.1.64"
