--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -22,3 +22,4 @@ futures = "0.3.25"
 signature = "1.6.4"
 async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
 toml_edit = "0.19.3"
+async-trait = "0.1.64"
