--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -23,3 +23,4 @@ signature = "1.6.4"
 async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
 toml_edit = "0.19.3"
 async-trait = "0.1.64"
+toml = "0.7.2"
