--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -25,3 +25,4 @@ pkcs8 = { version = "0.9.0", features = [ "encryption" ] }
 async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
 toml_edit = "0.19.3"
 async-trait = "0.1.64"
+toml = "0.7.2"
