--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -25,6 +25,7 @@ toml_edit = "0.19.3"
 async-trait = "0.1.64"
 toml = "0.7.2"
 reality_derive = { path = "../reality_derive" }
+clap = "4.2.1"
 
 [dev-dependencies]
 tracing-subscriber = "0.3.16"
