--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = [ "specs_storage_target" ]
+default = [ "specs_storage_target", "async_dispatcher" ]
+async_dispatcher = [ "tokio" ]
 specs_storage_target = [ "specs" ]
 
 [dependencies]
@@ -16,8 +17,13 @@ bytemuck = "1.12.1"
 tracing = "0.1.36"
 tracing-test = "0.2.3"
 serde = { version = "1.0.144", features = ["derive"] }
-tokio = { version = "1.19.2", features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"] }
 runmd = { path = "../../runmd" }
+
+# Feature: async_dispatcher
+[dependencies.tokio]
+version = "1.19.2"
+features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"]
+optional = true
 
 # Feature: specs_storage_target
 [dependencies.specs]
