--- a/reality_azure/Cargo.toml
+++ b/reality_azure/Cargo.toml
@@ -11,10 +11,10 @@ edition = "2021"
 # azure_identity = "0.7.0"
 # azure_storage_blobs = "0.7.0"
 # azure_core = "0.6.0"
-azure_storage = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/block-id-conversion" }
-azure_identity = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/block-id-conversion" }
-azure_storage_blobs = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/block-id-conversion" }
-azure_core = { git = "https://github.com/juliusl/azure-sdk-for-rust.git", branch="pr/block-id-conversion" }
+azure_storage = { version = "0.15.0" }
+azure_identity = { version = "0.15.0" }
+azure_storage_blobs = { version = "0.15.0" }
+azure_core = { version = "0.15.0" }
 
 reality = { path = "../reality" }
 bytes = "1.2.1"
