chore. build resource key on u128

--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -18,6 +18,7 @@ tracing = "0.1.36"
 tracing-test = "0.2.3"
 serde = { version = "1.0.144", features = ["derive"] }
 runmd = { path = "../runmd" }
+uuid = "1.4.1"
 
 # Feature: async_dispatcher
 [dependencies.tokio]
