--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = [ "specs_storage_target", "async_dispatcher" ]
+default = [ "specs_storage_target", "async_dispatcher", "derive" ]
+derive = ["reality_derive"]
 async_dispatcher = [ "tokio" ]
 specs_storage_target = [ "specs" ]
 
@@ -20,6 +21,10 @@ serde = { version = "1.0.144", features = ["derive"] }
 runmd = { path = "../runmd" }
 uuid = "1.4.1"
 bitflags = "2.4.0"
+
+[dependencies.reality_derive]
+path = "../reality_derive"
+optional = true
 
 # Feature: async_dispatcher
 [dependencies.tokio]
