--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -22,6 +22,7 @@ runmd = { path = "../runmd" }
 uuid = "1.4.1"
 bitflags = "2.4.0"
 futures-util = "0.3.28"
+anyhow = "1.0.75"
 
 [dependencies.reality_derive]
 path = "../reality_derive"
