--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -23,6 +23,7 @@ uuid = "1.4.1"
 bitflags = "2.4.0"
 futures-util = "0.3.28"
 anyhow = "1.0.75"
+async-stream = "0.3.5"
 
 [dependencies.reality_derive]
 path = "../reality_derive"
