--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -24,6 +24,7 @@ bitflags = "2.4.0"
 futures-util = "0.3.28"
 anyhow = "1.0.75"
 async-stream = "0.3.5"
+once_cell = "1.18.0"
 
 [dependencies.reality_derive]
 path = "../reality_derive"
