fix. ahash issue

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ members = [
     "reality_azure",
     "reality_tar",
 ]
+
+[patch.crates-io]
+specs = { git = 'https://github.com/juliusl/specs.git', branch = "fix/ahash"}
+shred = { git = 'https://github.com/juliusl/shred.git', branch = "fix/ahash"}
