--- a/intrglctive/Cargo.toml
+++ b/intrglctive/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "reality_atelier"
+name = "intrglctive"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-desktop = [ "imgui", "imgui-wgpu" ]
-repl = [ "clap" ]
+default = ["desktop"]
+desktop = [ "winit", "imgui", "imgui-wgpu" ]
+terminal = [ "clap" ]
 
 [dependencies]
 reality = { path = "../reality" }
@@ -19,3 +20,5 @@ clap ={ version = "4.4.6", features = [ "help" ], optional = true }
 # Desktop dependencies
 imgui = { version = "0.11.0", optional = true }
 imgui-wgpu = { version = "0.24.0", optional = true }
+tokio = "1.33.0"
+winit = { optional = true, version = "0.29.2" }
