--- a/intrglctive/Cargo.toml
+++ b/intrglctive/Cargo.toml
@@ -6,19 +6,35 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["desktop"]
-desktop = [ "winit", "imgui", "imgui-wgpu" ]
-terminal = [ "clap" ]
+default = []
+full = ["desktop", "terminal"]
+desktop = [ "winit", "wgpu" ]
+desktop-softbuffer = [ "softbuffer" ]
+desktop-imgui = [ "imgui", "imgui-wgpu", "imgui-winit-support" ]
+terminal = [ "clap", "shlex" ]
 
 [dependencies]
 reality = { path = "../reality" }
 anyhow = "1.0.75"
-
-# REPL dependencies
-clap ={ version = "4.4.6", features = [ "help" ], optional = true }
+tokio = "1.33.0"
+tracing = "0.1.40"
 
 # Desktop dependencies
+wgpu = { version = "0.18.0", optional = true }
+winit = { version = "0.29.2", optional = true, features = ["wayland", "rwh_05" ]}
 imgui = { version = "0.11.0", optional = true }
 imgui-wgpu = { version = "0.24.0", optional = true }
-tokio = "1.33.0"
-winit = { optional = true, version = "0.29.2" }
+imgui-winit-support = { version = "0.11.0", optional = true }
+softbuffer = { version = "0.3.2", optional = true }
+
+# Terminal dependencies
+clap ={ version = "4.4.6", features = [ "help", "derive" ], optional = true }
+shlex = { version = "1.2.0", optional = true }
+
+[[example]]
+name = "blank_window"
+required-features = [ "desktop", "desktop-softbuffer" ]
+
+[[example]]
+name = "blank_repl"
+required-features = [ "terminal" ]
