--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "univerux"
+name = "nebudeck"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,6 +15,7 @@ terminal = [ "clap", "shlex" ]
 
 [dependencies]
 reality = { path = "../reality" }
+loopio = { path = "../loopio" }
 anyhow = "1.0.75"
 tokio = "1.33.0"
 tracing = "0.1.40"
