--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [workspace]
 resolver = "2"
 members = [
+    "loopio",
     "reality",
     "reality_derive",
     "runmd",
-    "univerux",
+    "nebudeck",
 ]
