--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -7,3 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+reality = { path = "../reality" }
+tokio = "1.32.0"
+tokio-util = "0.7.9"
+tracing = "0.1.37"
+
+async-trait = { version = "0.1.73" }
+futures-util = "0.3.28"
+async-stream = "0.3.5"
+uuid = { version = "1.4.1", features = ["v4"] }
+tracing-test = { version = "0.2.4" }
