--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [features]
 default = []
-full = ["desktop", "terminal"]
+full = ["desktop", "terminal", "server"]
 desktop = [ "winit", "wgpu" ]
 desktop-softbuffer = [ "softbuffer" ]
 desktop-imgui = [ "imgui", "imgui-wgpu", "imgui-winit-support" ]
 terminal = [ "clap", "shlex" ]
+server = [ "tokio-util", "hyper", "hyper-tls", "poem" ]
 
 [dependencies]
 reality = { path = "../reality" }
@@ -19,6 +20,7 @@ loopio = { path = "../loopio" }
 anyhow = "1.0.75"
 tokio = "1.33.0"
 tracing = "0.1.40"
+tracing-test = "0.2.4"
 
 # Desktop dependencies
 wgpu = { version = "0.18.0", optional = true }
@@ -31,6 +33,12 @@ softbuffer = { version = "0.3.2", optional = true }
 # Terminal dependencies
 clap ={ version = "4.4.6", features = [ "help", "derive" ], optional = true }
 shlex = { version = "1.2.0", optional = true }
+
+# Server dependencies
+tokio-util = { version = "0.7.9", optional = true }
+hyper = { version = "0.14.27", optional = true }
+hyper-tls = { version = "0.5.0", optional = true }
+poem = { version = "1.3.32", features = ["server", "native-tls", "test"], optional = true }
 
 [[example]]
 name = "blank_window"
