--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -17,3 +17,4 @@ futures-util = "0.3.28"
 async-stream = "0.3.5"
 uuid = { version = "1.4.1", features = ["v4"] }
 tracing-test = { version = "0.2.4" }
+serde = "1.0.190"
