--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -5,16 +5,22 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+hyper-ext = [ "hyper", "hyper-tls" ]
+poem-ext = [ "poem" ]
+
 [dependencies]
 anyhow = "1.0.75"
 reality = { path = "../reality" }
 tokio = "1.32.0"
 tokio-util = "0.7.9"
 tracing = "0.1.37"
-
-async-trait = { version = "0.1.73" }
+async-trait = "0.1.73"
 futures-util = "0.3.28"
 async-stream = "0.3.5"
 uuid = { version = "1.4.1", features = ["v4"] }
 tracing-test = { version = "0.2.4" }
 serde = "1.0.190"
+hyper = { version = "0.14.27", features = [ "client", "http2", "runtime" ], optional = true }
+hyper-tls = { version = "0.5.0", optional = true }
+poem = { version = "1.3.58", optional = true }
