--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -15,12 +15,10 @@ terminal = [ "clap", "shlex" ]
 server = [ "tokio-util", "hyper", "hyper-tls", "poem" ]
 
 [dependencies]
-reality = { path = "../reality" }
 loopio = { path = "../loopio" }
 anyhow = "1.0.75"
 tokio = "1.33.0"
 tracing = "0.1.40"
-tracing-test = "0.2.4"
 
 # Desktop dependencies
 wgpu = { version = "0.18.0", optional = true }
@@ -39,6 +37,9 @@ tokio-util = { version = "0.7.9", optional = true }
 hyper = { version = "0.14.27", optional = true }
 hyper-tls = { version = "0.5.0", optional = true }
 poem = { version = "1.3.32", features = ["server", "native-tls", "test"], optional = true }
+
+[dev-dependencies]
+tracing-test = "0.2.4"
 
 [[example]]
 name = "blank_window"
