--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -25,6 +25,8 @@ futures-util = "0.3.28"
 anyhow = "1.0.75"
 async-stream = "0.3.5"
 once_cell = "1.18.0"
+async-trait = "0.1.74"
+tokio-util = "0.7.10"
 
 [dependencies.reality_derive]
 path = "../reality_derive"
