--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+default = ["std-ext"]
 std-ext = []
 hyper-ext = [ "hyper", "hyper-tls" ]
 poem-ext = [ "poem" ]
@@ -25,3 +26,4 @@ serde = "1.0.190"
 hyper = { version = "0.14.27", features = [ "client", "http2", "runtime" ], optional = true }
 hyper-tls = { version = "0.5.0", optional = true }
 poem = { version = "1.3.58", optional = true }
+bytes = "1.5.0"
