--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -27,3 +27,7 @@ hyper = { version = "0.14.27", features = [ "client", "http2", "runtime" ], opti
 hyper-tls = { version = "0.5.0", optional = true }
 poem = { version = "1.3.58", optional = true }
 bytes = "1.5.0"
+
+[[example]]
+name = "utility-demo"
+required-features = ["hyper-ext", "poem-ext"]
