--- a/reality/Cargo.toml
+++ b/reality/Cargo.toml
@@ -27,6 +27,7 @@ async-stream = "0.3.5"
 once_cell = "1.18.0"
 async-trait = "0.1.74"
 tokio-util = "0.7.10"
+bincode = "1.3.3"
 
 [dependencies.reality_derive]
 path = "../reality_derive"
