--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -27,6 +27,7 @@ hyper = { version = "0.14.27", features = [ "client", "http2", "runtime" ], opti
 hyper-tls = { version = "0.5.0", optional = true }
 poem = { version = "1.3.58", optional = true }
 bytes = "1.5.0"
+bincode = "1.3.3"
 
 [[example]]
 name = "utility-demo"
