--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 
 [features]
 default = []
-full = ["desktop", "terminal", "server"]
-desktop = [ "winit", "wgpu" ]
+full = ["desktop", "desktop-wgpu", "desktop-softbuffer", "desktop-imgui", "terminal"]
+desktop = [ "winit" ]
+desktop-wgpu = [ "wgpu" ]
 desktop-softbuffer = [ "softbuffer" ]
-desktop-imgui = [ "imgui", "imgui-wgpu", "imgui-winit-support" ]
+desktop-imgui = [ "desktop", "desktop-wgpu", "imgui-wgpu", "imgui-winit-support" ]
 terminal = [ "clap", "shlex" ]
-server = [ "tokio-util", "hyper", "hyper-tls", "poem" ]
 
 [dependencies]
 loopio = { path = "../loopio" }
@@ -31,12 +31,7 @@ softbuffer = { version = "0.3.2", optional = true }
 # Terminal dependencies
 clap ={ version = "4.4.6", features = [ "help", "derive" ], optional = true }
 shlex = { version = "1.2.0", optional = true }
-
-# Server dependencies
-tokio-util = { version = "0.7.9", optional = true }
-hyper = { version = "0.14.27", optional = true }
-hyper-tls = { version = "0.5.0", optional = true }
-poem = { version = "1.3.32", features = ["server", "native-tls", "test"], optional = true }
+async-trait = "0.1.74"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
