--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "loopio"
+description = "Runtime built on top of reality types compiled from runmd blocks."
+authors = ["juliusl@microsoft.com"]
 version = "0.1.0"
 edition = "2021"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
