--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "nebudeck"
+description = "Comprehensive suite of tools for building applications using reality and loopio semantics."
+authors = ["juliusl@microsoft.com"]
 version = "0.1.0"
 edition = "2021"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
