--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -35,6 +35,7 @@ softbuffer = { version = "0.3.2", optional = true }
 clap ={ version = "4.4.6", features = [ "help", "derive" ], optional = true }
 shlex = { version = "1.2.0", optional = true }
 async-trait = "0.1.74"
+paste = "1.0.14"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
