--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -31,6 +31,7 @@ hyper-tls = { version = "0.5.0", optional = true }
 poem = { version = "1.3.58", optional = true }
 bytes = "1.5.0"
 bincode = "1.3.3"
+shlex = "1.2.0"
 
 [[example]]
 name = "utility-demo"
