--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -10,11 +10,11 @@ license-file = "LICENSE"
 
 [features]
 default = []
-full = ["desktop", "desktop-wgpu", "desktop-softbuffer", "desktop-imgui", "terminal"]
-desktop = [ "winit" ]
-desktop-wgpu = [ "wgpu" ]
+full = ["desktop", "desktop-softbuffer", "desktop-imgui", "terminal"]
+desktop = [ ]
+desktop-vnext = ["winit_29", "wgpu_18"]
 desktop-softbuffer = [ "softbuffer" ]
-desktop-imgui = [ "desktop", "desktop-wgpu", "imgui-wgpu", "imgui-winit-support" ]
+desktop-imgui = [ "wgpu_17", "winit_27", "desktop", "imgui", "imgui-wgpu", "imgui-winit-support" ]
 terminal = [ "clap", "shlex" ]
 
 [dependencies]
@@ -24,18 +24,21 @@ tokio = "1.33.0"
 tracing = "0.1.40"
 
 # Desktop dependencies
-wgpu = { version = "0.18.0", optional = true }
-winit = { version = "0.29.2", optional = true, features = ["wayland", "rwh_05" ]}
+wgpu_17 = { package = "wgpu", version = "0.17.0", optional = true }
+wgpu_18 = { package = "wgpu", version = "0.18.0", optional = true }
+winit_29 = { package = "winit", version = "0.29.2", optional = true, features = ["wayland", "rwh_05" ]}
+winit_27 = { package = "winit", version = "0.27.5", optional = true }
 imgui = { version = "0.11.0", optional = true }
 imgui-wgpu = { version = "0.24.0", optional = true }
 imgui-winit-support = { version = "0.11.0", optional = true }
 softbuffer = { version = "0.3.2", optional = true }
 
 # Terminal dependencies
-clap ={ version = "4.4.6", features = [ "help", "derive" ], optional = true }
+clap ={ version = "4.4.6", features = [ "help", "derive", "string" ], optional = true }
 shlex = { version = "1.2.0", optional = true }
 async-trait = "0.1.74"
 paste = "1.0.14"
+futures = "0.3.29"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
@@ -47,3 +50,7 @@ required-features = [ "desktop", "desktop-softbuffer" ]
 [[example]]
 name = "blank_repl"
 required-features = [ "terminal" ]
+
+[[example]]
+name = "wgpu_imgui_demo_window"
+required-features = [ "desktop-imgui" ]
