--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -10,9 +10,11 @@ license-file = "LICENSE"
 
 [features]
 default = ["std-ext"]
+full = ["std-ext", "hyper-ext", "poem-ext", "wire-ext"]
 std-ext = []
 hyper-ext = [ "hyper", "hyper-tls" ]
 poem-ext = [ "poem" ]
+wire-ext = []
 
 [dependencies]
 anyhow = "1.0.75"
@@ -32,6 +34,8 @@ poem = { version = "1.3.58", optional = true }
 bytes = "1.5.0"
 bincode = "1.3.3"
 shlex = "1.2.0"
+url = "2.4.1"
+futures = "0.3.29"
 
 [[example]]
 name = "utility-demo"
