--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -10,11 +10,12 @@ license-file = "LICENSE"
 
 [features]
 default = ["std-ext"]
-full = ["std-ext", "hyper-ext", "poem-ext", "wire-ext"]
+full = ["std-ext", "hyper-ext", "poem-ext", "wire-ext", "flexbuffers-ext"]
 std-ext = []
 hyper-ext = [ "hyper", "hyper-tls" ]
 poem-ext = [ "poem" ]
 wire-ext = []
+flexbuffers-ext = [ "flexbuffers" ]
 
 [dependencies]
 anyhow = "1.0.75"
@@ -36,7 +37,8 @@ bincode = "1.3.3"
 shlex = "1.2.0"
 url = "2.4.1"
 futures = "0.3.29"
+flexbuffers = { version = "2.0.0", optional = true }
 
 [[example]]
 name = "utility-demo"
-required-features = ["hyper-ext", "poem-ext"]
+required-features = ["full"]
