--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -18,7 +18,7 @@ desktop-imgui = [ "wgpu_17", "winit_27", "desktop", "imgui", "imgui-wgpu", "imgu
 terminal = [ "clap", "shlex" ]
 
 [dependencies]
-loopio = { path = "../loopio" }
+loopio = { path = "../loopio", features = ["full"] }
 anyhow = "1.0.75"
 tokio = "1.33.0"
 tracing = "0.1.40"
@@ -39,6 +39,7 @@ shlex = { version = "1.2.0", optional = true }
 async-trait = "0.1.74"
 paste = "1.0.14"
 futures = "0.3.29"
+bincode = "1.3.3"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
