--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -12,7 +12,7 @@ license-file = "LICENSE"
 default = ["std-ext"]
 full = ["std-ext", "hyper-ext", "poem-ext", "wire-ext", "flexbuffers-ext"]
 std-ext = []
-hyper-ext = [ "hyper", "hyper-tls" ]
+hyper-ext = [ "hyper", "hyper-tls", "hyper_serde" ]
 poem-ext = [ "poem" ]
 wire-ext = []
 flexbuffers-ext = [ "flexbuffers" ]
@@ -35,9 +35,10 @@ poem = { version = "1.3.58", optional = true }
 bytes = "1.5.0"
 bincode = "1.3.3"
 shlex = "1.2.0"
-url = "2.4.1"
+url = { version = "2.4.1", features = ["serde"] }
 futures = "0.3.29"
 flexbuffers = { version = "2.0.0", optional = true }
+hyper_serde = { version = "0.13.2", optional = true }
 
 [[example]]
 name = "utility-demo"
