--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -28,7 +28,7 @@ wgpu_17 = { package = "wgpu", version = "0.17.0", optional = true }
 wgpu_18 = { package = "wgpu", version = "0.18.0", optional = true }
 winit_29 = { package = "winit", version = "0.29.2", optional = true, features = ["wayland", "rwh_05" ]}
 winit_27 = { package = "winit", version = "0.27.5", optional = true }
-imgui = { version = "0.11.0", optional = true }
+imgui = { version = "0.11.0", optional = true, features = ["tables-api"]}
 imgui-wgpu = { version = "0.24.0", optional = true }
 imgui-winit-support = { version = "0.11.0", optional = true }
 softbuffer = { version = "0.3.2", optional = true }
@@ -40,6 +40,7 @@ async-trait = "0.1.74"
 paste = "1.0.14"
 futures = "0.3.29"
 bincode = "1.3.3"
+tokio-util = "0.7.10"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
