--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -39,6 +39,7 @@ url = { version = "2.4.1", features = ["serde"] }
 futures = "0.3.29"
 flexbuffers = { version = "2.0.0", optional = true }
 hyper_serde = { version = "0.13.2", optional = true }
+tower = "0.4.13"
 
 [[example]]
 name = "utility-demo"
