--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -41,6 +41,7 @@ paste = "1.0.14"
 futures = "0.3.29"
 bincode = "1.3.3"
 tokio-util = "0.7.10"
+serde = "1.0.193"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
