feat. adding runir repo - decouples some of the field definition stuff to a more specialized crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 resolver = "2"
 members = [
+    "nebudeck",
     "loopio",
     "reality",
     "reality_derive",
+    "runir",
     "runmd",
-    "nebudeck",
 ]
