--- a/runir/Cargo.toml
+++ b/runir/Cargo.toml
@@ -15,5 +15,7 @@ bitflags = "2.4.1"
 bytemuck = "1.14.0"
 crc = { version = "3.0.1", optional = true }
 serde = { version = "1.0.193", features = ["derive"] }
-tokio = { version = "1.35.0", features = ["full"] }
 uuid = "1.6.1"
+
+tokio = { version = "1.35.0", features = ["full"] }
+futures = "0.3.29"
