--- a/runir/Cargo.toml
+++ b/runir/Cargo.toml
@@ -19,3 +19,5 @@ uuid = "1.6.1"
 
 tokio = { version = "1.35.0", features = ["full"] }
 futures = "0.3.29"
+tracing = "0.1.40"
+tracing-test = "0.2.4"
