--- a/runir/Cargo.toml
+++ b/runir/Cargo.toml
@@ -21,3 +21,4 @@ tokio = { version = "1.35.0", features = ["full"] }
 futures = "0.3.29"
 tracing = "0.1.40"
 tracing-test = "0.2.4"
+async-trait = "0.1.75"
