--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -27,7 +27,7 @@ async-trait = "0.1.73"
 futures-util = "0.3.28"
 async-stream = "0.3.5"
 uuid = { version = "1.4.1", features = ["v4"] }
-tracing-test = { version = "0.2.4" }
+tracing-test = { version = "0.2.4" } # , features = ["no-env-filter"]}
 serde = "1.0.190"
 hyper = { version = "0.14.27", features = [ "client", "http2", "runtime" ], optional = true }
 hyper-tls = { version = "0.5.0", optional = true }
