--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -40,6 +40,7 @@ futures = "0.3.29"
 flexbuffers = { version = "2.0.0", optional = true }
 hyper_serde = { version = "0.13.2", optional = true }
 tower = "0.4.13"
+thiserror = "1.0.56"
 
 [[example]]
 name = "utility-demo"
