--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -42,6 +42,7 @@ futures = "0.3.29"
 bincode = "1.3.3"
 tokio-util = "0.7.10"
 serde = "1.0.193"
+toml = "0.8.8"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
