--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -10,12 +10,11 @@ license-file = "LICENSE"
 
 [features]
 default = []
-full = ["desktop", "desktop-softbuffer", "desktop-imgui", "terminal"]
+full = ["desktop", "desktop-softbuffer", "desktop-imgui"]
 desktop = [ ]
 desktop-vnext = ["winit_29", "wgpu_18"]
 desktop-softbuffer = [ "softbuffer" ]
 desktop-imgui = [ "wgpu_17", "winit_27", "desktop", "imgui", "imgui-wgpu", "imgui-winit-support" ]
-terminal = [ "clap", "shlex" ]
 
 [dependencies]
 loopio = { path = "../loopio", features = ["full"] }
@@ -34,8 +33,8 @@ imgui-winit-support = { version = "0.11.0", optional = true }
 softbuffer = { version = "0.3.2", optional = true }
 
 # Terminal dependencies
-clap ={ version = "4.4.6", features = [ "help", "derive", "string" ], optional = true }
-shlex = { version = "1.2.0", optional = true }
+clap ={ version = "4.4.6", features = [ "help", "derive", "string", "env" ] }
+shlex = { version = "1.2.0" }
 async-trait = "0.1.74"
 paste = "1.0.14"
 futures = "0.3.29"
@@ -43,6 +42,8 @@ bincode = "1.3.3"
 tokio-util = "0.7.10"
 serde = "1.0.193"
 toml = "0.8.8"
+base64 = "0.21.5"
+tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
@@ -53,8 +54,11 @@ required-features = [ "desktop", "desktop-softbuffer" ]
 
 [[example]]
 name = "blank_repl"
-required-features = [ "terminal" ]
 
 [[example]]
 name = "wgpu_imgui_demo_window"
 required-features = [ "desktop-imgui" ]
+
+[[bin]]
+name = "cargo-nbd"
+required-features = [ "full" ]
