--- a/runir/Cargo.toml
+++ b/runir/Cargo.toml
@@ -24,3 +24,5 @@ tracing = "0.1.40"
 tracing-test = "0.2.4"
 async-trait = "0.1.75"
 clap = { version = "4.4.12", features = [ "string" ], optional = true }
+bytes = "1.5.0"
+bincode = "1.3.3"
