--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -2,7 +2,7 @@
 name = "loopio"
 description = "Runtime built on top of reality types compiled from runmd blocks."
 authors = ["juliusl@microsoft.com"]
-version = "0.1.0-devel"
+version = "0.1.0-dev"
 edition = "2021"
 license-file = "LICENSE"
 
@@ -19,7 +19,7 @@ flexbuffers-ext = [ "flexbuffers" ]
 
 [dependencies]
 anyhow = "1.0.75"
-reality = { path = "../reality" }
+reality = { version = "0.2.0-alpha", path = "../reality" }
 tokio = "1.32.0"
 tokio-util = "0.7.9"
 tracing = "0.1.37"
