--- a/nebudeck/Cargo.toml
+++ b/nebudeck/Cargo.toml
@@ -2,7 +2,7 @@
 name = "nebudeck"
 description = "Comprehensive suite of tools for building applications using reality and loopio semantics."
 authors = ["juliusl@microsoft.com"]
-version = "0.1.0-devel"
+version = "0.1.0-dev"
 edition = "2021"
 license-file = "LICENSE"
 
@@ -17,7 +17,7 @@ desktop-softbuffer = [ "softbuffer" ]
 desktop-imgui = [ "wgpu_17", "winit_27", "desktop", "imgui", "imgui-wgpu", "imgui-winit-support" ]
 
 [dependencies]
-loopio = { version = "0.1.0-devel", path = "../loopio", features = ["full"] }
+loopio = { version = "0.1.0-dev", path = "../loopio", features = ["full"] }
 anyhow = "1.0.75"
 tokio = "1.33.0"
 tracing = "0.1.40"
