--- a/loopio/Cargo.toml
+++ b/loopio/Cargo.toml
@@ -19,7 +19,7 @@ flexbuffers-ext = [ "flexbuffers" ]
 
 [dependencies]
 anyhow = "1.0.75"
-reality = { version = "0.2.0-alpha", path = "../reality" }
+reality = { version = "0.2.0-alpha", registry = "acr-crates", path = "../reality" }
 tokio = "1.32.0"
 tokio-util = "0.7.9"
 tracing = "0.1.37"
