--- a/.pipelines/templates/build-crates.yml
+++ b/.pipelines/templates/build-crates.yml
@@ -14,6 +14,8 @@ jobs:
         Crate: "reality_derive"
       reality:
         Crate: "reality"
+      loopio:
+        Crate: "loopio"
 
   variables: # More settings at https://aka.ms/obpipelines/yaml/jobs
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0"
