feat. add better diagnostics for spawned tasks

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,7 @@ acr-crates = { index = "sparse+https://msazure.pkgs.visualstudio.com/AzureContai
 
 [source.crates-io]
 replace-with = "ms-crates-io"
+
+# Note: This enables deeper runtime diagnostics
+# [build]
+# rustflags = ["--cfg", "tokio_unstable"]
